profile-ui/config/envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/self-service/"
                route:
                  cluster: kratos
              - match:
                  prefix: "/.well-known/"
                route:
                  cluster: hydra
              - match:
                  prefix: "/connect/"
                route:
                  cluster: hydra
              - match:
                  prefix: "/oauth2/"
                route:
                  cluster: hydra
              - match:
                  prefix: "/userinfo"
                route:
                  cluster: hydra
              - match:
                  prefix: "/profile"
                route:
                  cluster: profile
                  upgrade_configs:
                  - upgrade_type: "websocket"
              - match:
                  prefix: "/"
                route:
                  cluster: app-dcd
                  upgrade_configs:
                  - upgrade_type: "websocket"
          http_filters:
          - name: envoy.filters.http.router


  clusters:
  - name: kratos
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: kratos
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: kratos
                port_value: 4433
  - name: hydra
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: hydra
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: hydra
                port_value: 4444
  - name: profile
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: profile
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: profile
                port_value: 80
  - name: app-dcd
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: app-dcd
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app-dcd
                port_value: 80
